kubernetes/apps/default/openwebui/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat.f9.casa`)
      kind: Rule
      services:
        - name: openwebui
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
